--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       content="LunchLink offers convenient and nutritious food delivery services for office workers, ensuring a quick and satisfying lunch experience."
     />
 
+    <link rel="icon" href="/img/favicon.svg" />
+
+    <title>LunchLink - Convenient Food Delivery for Office Workers</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,8 +38,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-
-    <title>LunchLink - Convenient Food Delivery for Office Workers</title>
   </head>
   <body>
     <header class="main-header">
